# virtual-trading

./: .gitignore  CLAUDE.md  README.md  REQUIREMENTS.md  app.py  main.py  pyproject.toml
.claude/: settings.local.json
.streamlit/: config.toml  secrets.toml.example
config/: .env.example  settings.py  ui_theme.py
core/: auth.py  exceptions.py
core/models/: __init__.py  account.py  position.py  price_history.py  snapshot.py  stock.py  transaction.py  user.py
core/repositories/: account_repo.py  position_repo.py  snapshot_repo.py  stock_repo.py  transaction_repo.py
core/services/: portfolio_service.py  price_service.py  trade_service.py
infrastructure/auth/: oauth_flow.py  supabase_client.py
infrastructure/data_sources/: base.py  yfinance_source.py
infrastructure/db/: connection.py  init_db.py  load_stock_master.py
pages/: 1_📊_dashboard.py  2_🔍_trade.py  3_📋_positions.py  4_📜_history.py  5_⚙️_settings.py  5_🎮_simulation.py  5_🤖_simulation.py  6_⚙️_settings.py
tests/: conftest.py  test_portfolio_service.py  test_trade_service.py
